重构信息显示器核心代码，大大优化性能问题（是真的极大的优化了性能，是的，这让帧率至少上升了数倍）

--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 2025/06/28
+he.mod.updateDate = 2025/07/07
 
 settings.helium = \u30D8\u30EA\u30A6\u30E0\u8A2D\u5B9A
 settings.category.basic = \u57FA\u672C\u8A2D\u5B9A
@@ -16,12 +16,16 @@ settings.item.enableEntityInfoDisplay = \u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u60
 settings.item.enableHealthBarDisplay = \u4F53\u529B\u30D0\u30FC\u3092\u6709\u52B9
 settings.item.enableUnitStatusDisplay = \u30B9\u30C6\u30FC\u30BF\u30B9\u52B9\u679C\u8868\u793A\u3092\u6709\u52B9
 settings.item.enableRangeDisplay = \u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u306E\u7BC4\u56F2\u8868\u793A\u3092\u6709\u52B9
-settings.item.lowRangeRenderer = (\u7FFB\u8A33\u5F85\u3061) \u7B80\u5316\u8303\u56F4\u663E\u793A\u5668\u7684\u52A8\u753B\u6548\u679C
+settings.item.rangeRenderLevel = (\u7FFB\u8A33\u5F85\u3061) \u8303\u56F4\u663E\u793A\u5668\u8D28\u91CF
 settings.item.showAttackRange = \u653B\u6483\u7BC4\u56F2\u3092\u8868\u793A
 settings.item.showHealRange = \u56DE\u5FA9\u7BC4\u56F2\u3092\u8868\u793A
 settings.item.showOverdriveRange = \u30AA\u30FC\u30D0\u30FC\u30C9\u30E9\u30A4\u30D6\u7BC4\u56F2\u3092\u8868\u793A
 settings.item.entityInfoScale = \u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u60C5\u5831\u8868\u793A\u30B9\u30B1\u30FC\u30EB
 settings.item.entityInfoAlpha = \u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u60C5\u5831\u8868\u793A\u30A2\u30EB\u30D5\u30A1 (\u900F\u904E\u5EA6)
+
+range.animate.full = (\u7FFB\u8A33\u5F85\u3061) \u7CBE\u7EC6
+range.animate.simplified = (\u7FFB\u8A33\u5F85\u3061) \u7B80\u5316
+range.animate.prof = (\u7FFB\u8A33\u5F85\u3061) \u6027\u80FD
 
 settings.basic.placement = \u8A2D\u7F6E\u30D1\u30CD\u30EB
 settings.item.enableBetterPlacement = \u6539\u5584\u3055\u308C\u305F\u8A2D\u7F6E\u30D1\u30CD\u30EB\u3092\u6709\u52B9
