--- a/ModpackModel/assets/bundles/bundle_ru.properties
+++ b/ModpackModel/assets/bundles/bundle_ru.properties
@@ -1,5 +1,5 @@
 modpack.mod.version = unspecified
-modpack.mod.updateDate = 28 \u0438\u044E\u043D. 2025\u202F\u0433.
+modpack.mod.updateDate = 7 \u0438\u044E\u043B. 2025\u202F\u0433.
 he.mod.version = beta-0.7
 he.mod.updateDate = 12 \u0438\u044E\u043D. 2025\u202F\u0433.
 
