--- a/assets/bundles/bundle_de_DE.properties
+++ b/assets/bundles/bundle_de_DE.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 28.06.2025
+he.mod.updateDate = 07.07.2025
 
 settings.helium = (\u00DCbersetzung w\u00FCnschen) \u6C26\u914D\u7F6E
 settings.category.basic = (\u00DCbersetzung w\u00FCnschen) \u57FA\u7840\u8BBE\u7F6E
@@ -16,12 +16,16 @@ settings.item.enableEntityInfoDisplay = (\u00DCbersetzung w\u00FCnschen) \u542F\
 settings.item.enableHealthBarDisplay = (\u00DCbersetzung w\u00FCnschen) \u542F\u7528\u751F\u547D\u503C\u663E\u793A\u9762\u677F
 settings.item.enableUnitStatusDisplay = (\u00DCbersetzung w\u00FCnschen) \u542F\u7528\u5355\u4F4D\u72B6\u6001\u663E\u793A
 settings.item.enableRangeDisplay = (\u00DCbersetzung w\u00FCnschen) \u542F\u7528\u8303\u56F4\u663E\u793A
-settings.item.lowRangeRenderer = (\u00DCbersetzung w\u00FCnschen) \u7B80\u5316\u8303\u56F4\u663E\u793A\u5668\u7684\u52A8\u753B\u6548\u679C
+settings.item.rangeRenderLevel = (\u00DCbersetzung w\u00FCnschen) \u8303\u56F4\u663E\u793A\u5668\u8D28\u91CF
 settings.item.showAttackRange = (\u00DCbersetzung w\u00FCnschen) \u663E\u793A\u653B\u51FB\u8303\u56F4
 settings.item.showHealRange = (\u00DCbersetzung w\u00FCnschen) \u663E\u793A\u4FEE\u590D\u8303\u56F4
 settings.item.showOverdriveRange = (\u00DCbersetzung w\u00FCnschen) \u663E\u793A\u8D85\u901F\u6295\u5F71\u8303\u56F4
 settings.item.entityInfoScale = (\u00DCbersetzung w\u00FCnschen) \u4FE1\u606F\u663E\u793A\u7F29\u653E
 settings.item.entityInfoAlpha = (\u00DCbersetzung w\u00FCnschen) \u4FE1\u606F\u6307\u793A\u5668\u900F\u660E\u5EA6
+
+range.animate.full = (\u00DCbersetzung w\u00FCnschen) \u7CBE\u7EC6
+range.animate.simplified = (\u00DCbersetzung w\u00FCnschen) \u7B80\u5316
+range.animate.prof = (\u00DCbersetzung w\u00FCnschen) \u6027\u80FD
 
 settings.basic.placement = (\u00DCbersetzung w\u00FCnschen) \u653E\u7F6E\u9762\u677F
 settings.item.enableBetterPlacement = (\u00DCbersetzung w\u00FCnschen) \u542F\u7528\u66F4\u597D\u7684\u653E\u7F6E\u9762\u677F
