--- a/assets/bundles/bundle_id_ID.properties
+++ b/assets/bundles/bundle_id_ID.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 28 Jun 2025
+he.mod.updateDate = 7 Jul 2025
 
 settings.helium = Konfigurasi Helium
 settings.category.basic = Pengaturan Dasar
@@ -16,12 +16,16 @@ settings.item.enableEntityInfoDisplay = Nyalakan info entitas
 settings.item.enableHealthBarDisplay = Nyalakan bar darah
 settings.item.enableUnitStatusDisplay = Nyalakan penampil status unit
 settings.item.enableRangeDisplay = Nyalakan penampil jarak entitas
-settings.item.lowRangeRenderer = (Untuk diterjemahkan) \u7B80\u5316\u8303\u56F4\u663E\u793A\u5668\u7684\u52A8\u753B\u6548\u679C
+settings.item.rangeRenderLevel = (Untuk diterjemahkan) \u8303\u56F4\u663E\u793A\u5668\u8D28\u91CF
 settings.item.showAttackRange = Tampilkan jarak serangan
 settings.item.showHealRange = Tampilkan jarak penyembuhan
 settings.item.showOverdriveRange = Tampilkan jarak pemercepat
 settings.item.entityInfoScale = Info entitas menunjukan skala
 settings.item.entityInfoAlpha = Info entitas menunjukan alfa(opasitas)
+
+range.animate.full = (Untuk diterjemahkan) \u7CBE\u7EC6
+range.animate.simplified = (Untuk diterjemahkan) \u7B80\u5316
+range.animate.prof = (Untuk diterjemahkan) \u6027\u80FD
 
 settings.basic.placement = Panel Penempatan
 settings.item.enableBetterPlacement = Nyalakan panel penempatan yang lebih baik
