修正非更新方块实体的悬停信息显示

--- a/assets/bundles/bundle_de_DE.properties
+++ b/assets/bundles/bundle_de_DE.properties
@@ -29,6 +29,7 @@ range.animate.prof = (\u00DCbersetzung w\u00FCnschen) \u6027\u80FD
 
 settings.basic.placement = (\u00DCbersetzung w\u00FCnschen) \u653E\u7F6E\u9762\u677F
 settings.item.enableBetterPlacement = (\u00DCbersetzung w\u00FCnschen) \u542F\u7528\u66F4\u597D\u7684\u653E\u7F6E\u9762\u677F
+settings.item.blockColumns = (\u00DCbersetzung w\u00FCnschen) \u653E\u7F6E\u9762\u677F\u65B9\u5757\u663E\u793A\u5217\u6570
 
 settings.basic.modsDialog = (\u00DCbersetzung w\u00FCnschen) \u6A21\u7EC4\u7BA1\u7406\u5668
 settings.item.enableBetterModsDialog = (\u00DCbersetzung w\u00FCnschen) \u542F\u7528\u66F4\u597D\u7684\u6A21\u7EC4\u7BA1\u7406\u5668
