--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -29,6 +29,7 @@ range.animate.prof = (\u7FFB\u8A33\u5F85\u3061) \u6027\u80FD
 
 settings.basic.placement = \u8A2D\u7F6E\u30D1\u30CD\u30EB
 settings.item.enableBetterPlacement = \u6539\u5584\u3055\u308C\u305F\u8A2D\u7F6E\u30D1\u30CD\u30EB\u3092\u6709\u52B9
+settings.item.blockColumns = (\u7FFB\u8A33\u5F85\u3061) \u653E\u7F6E\u9762\u677F\u65B9\u5757\u663E\u793A\u5217\u6570
 
 settings.basic.modsDialog = Mod\u30DE\u30CD\u30FC\u30B8\u30E3\u30FC
 settings.item.enableBetterModsDialog = \u6539\u5584\u3055\u308C\u305FMod\u30C0\u30A4\u30A2\u30ED\u30B0\u3092\u6709\u52B9
