--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -29,6 +29,7 @@ range.animate.prof = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0
 
 settings.basic.placement = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u653E\u7F6E\u9762\u677F
 settings.item.enableBetterPlacement = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u542F\u7528\u66F4\u597D\u7684\u653E\u7F6E\u9762\u677F
+settings.item.blockColumns = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u653E\u7F6E\u9762\u677F\u65B9\u5757\u663E\u793A\u5217\u6570
 
 settings.basic.modsDialog = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6A21\u7EC4\u7BA1\u7406\u5668
 settings.item.enableBetterModsDialog = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u542F\u7528\u66F4\u597D\u7684\u6A21\u7EC4\u7BA1\u7406\u5668
