--- a/assets/bundles/bundle_id_ID.properties
+++ b/assets/bundles/bundle_id_ID.properties
@@ -29,6 +29,7 @@ range.animate.prof = (Untuk diterjemahkan) \u6027\u80FD
 
 settings.basic.placement = Panel Penempatan
 settings.item.enableBetterPlacement = Nyalakan panel penempatan yang lebih baik
+settings.item.blockColumns = (Untuk diterjemahkan) \u653E\u7F6E\u9762\u677F\u65B9\u5757\u663E\u793A\u5217\u6570
 
 settings.basic.modsDialog = Manajer Mod
 settings.item.enableBetterModsDialog = Nyalakan dialog mod yang lebih baik
