--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -29,6 +29,7 @@ range.animate.prof = (\u5F85\u7FFB\u8B6F) \u6027\u80FD
 
 settings.basic.placement = (\u5F85\u7FFB\u8B6F) \u653E\u7F6E\u9762\u677F
 settings.item.enableBetterPlacement = (\u5F85\u7FFB\u8B6F) \u542F\u7528\u66F4\u597D\u7684\u653E\u7F6E\u9762\u677F
+settings.item.blockColumns = (\u5F85\u7FFB\u8B6F) \u653E\u7F6E\u9762\u677F\u65B9\u5757\u663E\u793A\u5217\u6570
 
 settings.basic.modsDialog = (\u5F85\u7FFB\u8B6F) \u6A21\u7EC4\u7BA1\u7406\u5668
 settings.item.enableBetterModsDialog = (\u5F85\u7FFB\u8B6F) \u542F\u7528\u66F4\u597D\u7684\u6A21\u7EC4\u7BA1\u7406\u5668
