修复在旧版本安卓设备与Java运行时上发生崩溃的问题，优化精细图形的边缘锯齿

--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-1.0
-he.mod.updateDate = 13 \u0438\u044E\u043B. 2025\u202F\u0433.
+he.mod.updateDate = 20 \u0438\u044E\u043B. 2025\u202F\u0433.
 
 settings.helium = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6C26\u914D\u7F6E
 settings.category.basic = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u57FA\u7840\u8BBE\u7F6E
@@ -188,3 +188,4 @@ misc.reverse = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u0
 misc.download = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4E0B\u8F7D
 misc.complete = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5B8C\u6210
 misc.save = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4FDD\u5B58
+misc.unknow = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u672A\u77E5
