--- a/assets/bundles/bundle_de_DE.properties
+++ b/assets/bundles/bundle_de_DE.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-1.0
-he.mod.updateDate = 13.07.2025
+he.mod.updateDate = 20.07.2025
 
 settings.helium = (\u00DCbersetzung w\u00FCnschen) \u6C26\u914D\u7F6E
 settings.category.basic = (\u00DCbersetzung w\u00FCnschen) \u57FA\u7840\u8BBE\u7F6E
@@ -188,3 +188,4 @@ misc.reverse = (\u00DCbersetzung w\u00FCnschen) \u9006\u5E8F
 misc.download = (\u00DCbersetzung w\u00FCnschen) \u4E0B\u8F7D
 misc.complete = (\u00DCbersetzung w\u00FCnschen) \u5B8C\u6210
 misc.save = (\u00DCbersetzung w\u00FCnschen) \u4FDD\u5B58
+misc.unknow = (\u00DCbersetzung w\u00FCnschen) \u672A\u77E5
