--- a/assets/bundles/bundle_id_ID.properties
+++ b/assets/bundles/bundle_id_ID.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-1.0
-he.mod.updateDate = 13 Jul 2025
+he.mod.updateDate = 20 Jul 2025
 
 settings.helium = Konfigurasi Helium
 settings.category.basic = Pengaturan Dasar
@@ -188,3 +188,4 @@ misc.reverse = Urut Terbalik
 misc.download = Unduh
 misc.complete = Selesai
 misc.save = Simpan
+misc.unknow = (Untuk diterjemahkan) \u672A\u77E5
