--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-1.0
-he.mod.updateDate = 2025/07/13
+he.mod.updateDate = 2025/07/20
 
 settings.helium = \u30D8\u30EA\u30A6\u30E0\u8A2D\u5B9A
 settings.category.basic = \u57FA\u672C\u8A2D\u5B9A
@@ -188,3 +188,4 @@ misc.reverse = \u964D\u9806\u30BD\u30FC\u30C8
 misc.download = \u30C0\u30A6\u30F3\u30ED\u30FC\u30C9
 misc.complete = \u5B8C\u4E86
 misc.save = \u4FDD\u5B58
+misc.unknow = (\u7FFB\u8A33\u5F85\u3061) \u672A\u77E5
