--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-1.0
-he.mod.updateDate = 2025\u5E747\u670813\u65E5
+he.mod.updateDate = 2025\u5E747\u670820\u65E5
 
 settings.helium = \u6C26\u914D\u7F6E
 settings.category.basic = \u57FA\u7840\u8BBE\u7F6E
@@ -188,3 +188,4 @@ misc.reverse = \u9006\u5E8F
 misc.download = \u4E0B\u8F7D
 misc.complete = \u5B8C\u6210
 misc.save = \u4FDD\u5B58
+misc.unknow = \u672A\u77E5
