紧急修复150版本的单位控制面板崩溃问题

--- a/assets/bundles/bundle_id_ID.properties
+++ b/assets/bundles/bundle_id_ID.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-1.1
-he.mod.updateDate = 20 Jul 2025
+he.mod.updateDate = 11 Agu 2025
 
 settings.helium = Konfigurasi Helium
 settings.category.basic = Pengaturan Dasar
